--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "ng test",
     "lint": "ng lint"
   },
+  "engines": {
+    "node": " >=18 <19"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
