--- a/angular.json
+++ b/angular.json
@@ -126,7 +126,10 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@ionic/angular-toolkit"]
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ],
+    "analytics": "51472d5e-ede9-496f-b01f-5ea03b60cd46"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
