--- a/package.json
+++ b/package.json
@@ -16,54 +16,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.2",
-    "@angular/common": "^17.0.2",
-    "@angular/compiler": "^17.0.2",
-    "@angular/core": "^17.0.2",
-    "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
+    "@angular/animations": "^17.0.7",
+    "@angular/common": "^17.0.7",
+    "@angular/compiler": "^17.0.7",
+    "@angular/core": "^17.0.7",
+    "@angular/forms": "^17.0.7",
+    "@angular/platform-browser": "^17.0.7",
+    "@angular/platform-browser-dynamic": "^17.0.7",
+    "@angular/router": "^17.0.7",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.5.0",
+    "@capacitor/core": "5.5.1",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/google-maps": "^5.3.3",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
-    "@ionic/angular": "^7.5.0",
-    "appwrite": "^13.0.0",
-    "ionicons": "^7.2.1",
+    "@ionic/angular": "7.6.1",
+    "appwrite": "13.0.1",
+    "ionicons": "7.2.2",
+    "ngxtension": "1.6.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular-eslint/builder": "^17.0.1",
-    "@angular-eslint/eslint-plugin": "^17.0.1",
-    "@angular-eslint/eslint-plugin-template": "^17.0.1",
-    "@angular-eslint/schematics": "^17.0.1",
-    "@angular-eslint/template-parser": "^17.0.1",
-    "@angular/cli": "17.0.0",
-    "@angular/compiler-cli": "^17.0.2",
-    "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "5.5.0",
-    "@ionic/angular-toolkit": "^9.0.0",
-    "@types/jasmine": "~4.3.0",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "jasmine-core": "~4.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@angular-devkit/build-angular": "^17.0.7",
+    "@angular-eslint/builder": "17.1.1",
+    "@angular-eslint/eslint-plugin": "17.1.1",
+    "@angular-eslint/eslint-plugin-template": "17.1.1",
+    "@angular-eslint/schematics": "17.1.1",
+    "@angular-eslint/template-parser": "17.1.1",
+    "@angular/cli": "17.0.7",
+    "@angular/compiler-cli": "^17.0.7",
+    "@angular/language-service": "^17.0.7",
+    "@capacitor/cli": "5.5.1",
+    "@ionic/angular-toolkit": "10.0.0",
+    "@types/jasmine": "5.1.4",
+    "@types/node": "20.10.4",
+    "@typescript-eslint/eslint-plugin": "6.14.0",
+    "@typescript-eslint/parser": "6.14.0",
+    "jasmine-core": "5.1.1",
+    "jasmine-spec-reporter": "7.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "ts-node": "^8.3.0",
-    "typescript": "~5.2.2"
+    "karma-jasmine-html-reporter": "2.1.0",
+    "typescript": "5.2.2"
   },
   "description": "An Ionic project"
 }
