refactor(service): :recycle: refactor auth service, update packages

--- a/package.json
+++ b/package.json
@@ -25,37 +25,37 @@
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
     "@angular/service-worker": "^17.0.8",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.5.1",
-    "@capacitor/geolocation": "^5.0.6",
-    "@capacitor/google-maps": "^5.3.3",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/status-bar": "5.0.6",
-    "@ionic/angular": "7.6.1",
+    "@capacitor/app": "next",
+    "@capacitor/core": "next",
+    "@capacitor/geolocation": "next",
+    "@capacitor/google-maps": "next",
+    "@capacitor/haptics": "next",
+    "@capacitor/keyboard": "next",
+    "@capacitor/status-bar": "next",
+    "@ionic/angular": "7.6.3",
     "appwrite": "13.0.1",
     "ionicons": "7.2.2",
-    "ngxtension": "1.7.0",
+    "ngxtension": "1.8.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.9",
-    "@angular-eslint/builder": "17.1.1",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/schematics": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
+    "@angular-eslint/builder": "17.2.0",
+    "@angular-eslint/eslint-plugin": "17.2.0",
+    "@angular-eslint/eslint-plugin-template": "17.2.0",
+    "@angular-eslint/schematics": "17.2.0",
+    "@angular-eslint/template-parser": "17.2.0",
     "@angular/cli": "17.0.9",
     "@angular/compiler-cli": "^17.0.8",
     "@angular/language-service": "^17.0.8",
-    "@capacitor/cli": "5.5.1",
+    "@capacitor/cli": "next",
     "@ionic/angular-toolkit": "10.0.0",
     "@types/jasmine": "5.1.4",
-    "@types/node": "20.10.4",
-    "@typescript-eslint/eslint-plugin": "6.14.0",
-    "@typescript-eslint/parser": "6.14.0",
+    "@types/node": "20.10.6",
+    "@typescript-eslint/eslint-plugin": "6.18.0",
+    "@typescript-eslint/parser": "6.18.0",
     "jasmine-core": "5.1.1",
     "jasmine-spec-reporter": "7.0.0",
     "karma": "~6.4.0",
