--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@capacitor/haptics": "next",
     "@capacitor/keyboard": "next",
     "@capacitor/status-bar": "next",
+    "@date-fns/utc": "^1.1.1",
     "@ionic/angular": "7.6.3",
     "@types/moment-duration-format": "^2.2.6",
     "appwrite": "13.0.1",
-    "date-fns": "^3.1.0",
+    "date-fns": "3.1.0",
     "ionicons": "7.2.2",
-    "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
     "ngxtension": "1.8.1",
     "rxjs": "~7.8.0",
