--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,8 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+/src/environments
 /environments
-
 # System files
 .DS_Store
 Thumbs.db
