--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ log.txt
 /.versions
 /coverage
 
+# Env
+src/environments/environment.prod.ts
+src/environments/environment.ts
+src/environments/.env
+
 # Ionic
 /.ionic
 /www
