--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "config": "ts-node src/environments/set-env.ts",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -42,6 +43,7 @@
     "moment-duration-format": "^2.3.2",
     "ngxtension": "1.8.1",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -58,7 +60,7 @@
     "@capacitor/cli": "next",
     "@ionic/angular-toolkit": "10.0.0",
     "@types/jasmine": "5.1.4",
-    "@types/node": "20.10.6",
+    "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "6.18.0",
     "@typescript-eslint/parser": "6.18.0",
     "jasmine-core": "5.1.1",
