--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,12 @@
                   "maximumError": "4kb"
                 }
               ],
-              "fileReplacements": [{}],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "outputHashing": "all",
               "serviceWorker": "ngsw-config.json"
             },
