ci(ci/di): :refactor: refactor workflow

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ts-node src/environments/set-env.ts && ng build",
-    "config": "ts-node src/environments/set-env.ts",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -39,6 +38,7 @@
     "@types/moment-duration-format": "^2.2.6",
     "appwrite": "13.0.1",
     "date-fns": "3.1.0",
+    "dotenv": "^16.3.1",
     "ionicons": "7.2.2",
     "moment-duration-format": "^2.3.2",
     "ngxtension": "1.8.1",
