ci(ci/di): use dotenv for enviroment vars, bring back enviroment.ts

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ log.txt
 /coverage
 
 # Env
-src/environments/environment.prod.ts
-src/environments/environment.ts
+# src/environments/environment.prod.ts
+# src/environments/environment.ts
 .env
 
 # Ionic
