ci(ci/di): fixe more stuff

--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "@angular-eslint/eslint-plugin-template": "17.2.0",
     "@angular-eslint/schematics": "17.2.0",
     "@angular-eslint/template-parser": "17.2.0",
-    "@angular/cli": "17.0.9",
+    "@angular/cli": "^17.0.9",
     "@angular/compiler-cli": "^17.0.8",
     "@angular/language-service": "^17.0.8",
     "@capacitor/cli": "next",
     "@ionic/angular-toolkit": "10.0.0",
+    "@ngx-env/builder": "^17.0.7",
     "@types/jasmine": "5.1.4",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "6.18.0",
